openmediavault (5.4.3-1) stable; urgency=low

  * Issue #689: Network MTU value doesn't get applied.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 29 Apr 2020 08:07:24 +0200

openmediavault (5.4.2-1) stable; urgency=low

  * Fix bug in bond network interface configuration when no primary
    interface is selected.
  * Cleanup empty systemd-networkd configuration files, otherwise
    netplan.io will fail because of an udevadm error.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 23 Apr 2020 22:27:06 +0200

openmediavault (5.4.1-1) stable; urgency=low

  * Update locales.
  * Raise an error when SMB/CIFS is activated and the DNS hostname
    is longer than 15 characters.
  * Remove sysctl settings which have disabled IPv6 by default.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 21 Apr 2020 19:19:47 +0200

openmediavault (5.4.0-1) stable; urgency=low

  * Update locales.
  * Modify interface of RPC "rpc.network.setbondiface". Return slaves as
    an array instead of a comma separated string.
  * The RPC Network::getVlanCandidates will return only configured
    network interfaces.
  * Use netplan.io to deploy the network configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Apr 2020 17:23:35 +0200

openmediavault (5.3.10-1) stable; urgency=low

  * Fix bug in the Python RPC error handling. This should fix the "got an
    unexpected keyword argument 'http_status_code'" issue.
  * Add user 'admin' to the Postfix recipient_canonical configuration.
  * Issue #670: Bonding interface configuration gets messed by VLAN.
  * Issue #671: Shared folders with blanks which are used as bind mounts
    are not formatted correct in /etc/fstab. Nevertheless it is not
    possible to mount such bind mounts because of an error in SaltStack,
    see #524, #566 or https://github.com/saltstack/salt/issues/54508.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 02 Apr 2020 17:55:25 +0200
