@@ -24,7 +24,7 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  python3-apt, wpasupplicant, systemd, systemd-sysv, btrfs-progs,
  samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq, chrony,
  python3-netifaces, udev, python3-lxml, salt-minion, libnss-myhostname,
- php-yaml, python3-click, ${misc:Depends}
+ php-yaml, python3-click, python3-cached-property, ${misc:Depends}
 Description: openmediavault - The open network attached storage solution
  openmediavault is a small and simple to use network attached storage system
  with a smart WebGUI.
